added to contact us

--- a/contact_us.html
+++ b/contact_us.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Us</title>
+    <link rel="stylesheet" href="contact_us.css">
 </head>
 <body>
+    <div class="wrapper">
+        <div class="title">
+            <h3>CONTACT US</h3>
+         </div>
+         <div class="code container">
+            <div class="card">
+            <div class="img1">
+                <img 
+            </div>
+            </div>
+         </div>
+    </div>
     
 </body>
 </html>
