created donate.js and added a cta

--- a/donatepage/donate.html
+++ b/donatepage/donate.html
@@ -19,9 +19,12 @@
                 <img src="/donatepage/cancerdonation.jpg" class="img--donate">
             </div>
             <article class="donate--cta">
-                <p>
-                    Place-holder text
-                </p>
+                <h1>Donate Here</h1>
+                <div>
+                    <p>
+                        Help us give back to the many people who are suffereing during their journey. All funds are given to patients in need 
+                    </p>
+                </div>
             </article>
         </div>
     </main>
