[NEW]---Added CSS and adjusted page view.-Will further continue to work on CSS & organizing the main content.

--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <link rel="stylesheet" href="aboutus.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="main_content" id="h1_aboutus">
     <h1>About Us</h1>
         <p>Beatin blue is Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio voluptas blanditiis dolorum accusantium consequatur cumque nostrum mollitia maiores impedit unde, veniam cupiditate, deleniti odio voluptatum error hic modi. Voluptatum, iure!</p>
     </div>
+    <section class="grouped_content">
     <div class="main_content" id="h2_mission">
         <h2>Mission Statement</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae mollitia deleniti nulla sed excepturi voluptate. Reiciendis quaerat placeat, quam itaque voluptate praesentium obcaecati, ducimus aperiam illum veritatis error corporis doloribus.</p>
@@ -26,6 +29,7 @@
         <h3>Our plan</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus sed, voluptas expedita perferendis iure architecto quibusdam quia amet eveniet rerum quidem est alias? Illo sint sit excepturi quibusdam. Illo, eum.</p>
     </div>
+    </section>
 
 </body>
 </html>
