--- a/contact_us.html
+++ b/contact_us.html
@@ -10,14 +10,32 @@
     <div class="wrapper">
         <div class="title">
             <h3>CONTACT US</h3>
-         </div>
-         <div class="code container">
+        </div>
+        <div class="code container">
             <div class="card">
             <div class="img1">
-                <img 
+                <img src="2J5A3206.jpg" alt="Edgardo Torres Headshot">
+            </div>
+            <div class="content_box">
+                <h3>Edgardo Torres</h3>
+                <h4>etorres17@r2happrentice.org</h4>
+            </div>
+
+            <div class="card">
+                <div class="img2">
+                    <img src="2J5A3198.jpg" alt="Michael Howey Headshot">
+                </div>
+                <div class="content_box"></div>
+                <h3>Michael Howey</h3>
+                <h4>mhowey17@r2happrentice.org</h4>
+            </div>
+
+            <div class="card">
+                <img src="2J5A3200.jpg" alt="Alexander Irizarry Headshot">
             </div>
             </div>
-         </div>
+            </div>
+        </div>
     </div>
     
 </body>
