--- a/donatepage/donate.html
+++ b/donatepage/donate.html
@@ -22,7 +22,8 @@
                 <h1>Donate Here</h1>
                 <div>
                     <p>
-                        Help us give back to the many people who are suffereing during their journey. All funds are given to patients in need 
+                        Help us give back to the many people who are suffereing during their journey. 
+                        All funds are given to patients in regards to their hospital bills.
                     </p>
                 </div>
             </article>
