--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -15,7 +15,7 @@
     <section class="grouped_content">
     <div class="main_content" id="h2_mission">
         <h2>Mission Statement</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae mollitia deleniti nulla sed excepturi voluptate. Reiciendis quaerat placeat, quam itaque voluptate praesentium obcaecati, ducimus aperiam illum veritatis error corporis doloribus.</p>
+        <p> TEst Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae mollitia deleniti nulla sed excepturi voluptate. Reiciendis quaerat placeat, quam itaque voluptate praesentium obcaecati, ducimus aperiam illum veritatis error corporis doloribus.</p>
     </div>
     <div class="main_content" id="h3_why">
         <h3 id="h3_why">Our Why</h3>
