--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -23,7 +23,7 @@
     </div>
     <div class="main_content" id="h3_colon">
         <h3>What is Colon Cancer</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse molestias commodi harum, quo incidunt aperiam veritatis quibusdam atque a in iure maiores pariatur rem doloremque ex voluptatibus quia eos laboriosam.</p>
+        <p>Another TEst Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse molestias commodi harum, quo incidunt aperiam veritatis quibusdam atque a in iure maiores pariatur rem doloremque ex voluptatibus quia eos laboriosam.</p>
     </div>
     <div class="main_content" id="h3_plan">
         <h3>Our plan</h3>
