updating get involved

--- a/getinvolved/getinvolved.html
+++ b/getinvolved/getinvolved.html
@@ -9,18 +9,36 @@
 </head>
 <body>
    <header>
-    <nav class="navbar">
-      <button><a id="content-btn" href="../index.html"> My content</a></button>
+    <nav>
+        <img class="logo" src="logo.png" alt="">
+        <li><a href="">Contact us</a></li>
+        <li><a href="">Donate</a></li>
+        <li><a href="">Our Team</a></li>
+        <li><a href="">Get involve</a></li>
+      </nav>
     </nav>
   </header>
 
-<main class="products"> 
-    <div id="p-one"><a href="https://www.amazon.com/Valentino-Uomo-Born-Roma-Spray/dp/B07YDGWWPL/ref=sr_1_2?crid=3K9BBXFUMI2SE&dib=eyJ2IjoiMSJ9.Y6S0CjCH_bIaNUprboNXQYYEaxkhrhpx2kg31XruYKKy8G-6BBTq7P2u2Q3o4bJz3gL3nVFvR23bTY8-JIiRm-HLR4ZU0R1Pd4ao55tgsEHrFObitG5xtdYa3khzGN_77KxnPHgFuZnLHGDBYRl8MHnmVu4FIDrQWCK70bM80gJ_UUad76MmnnkQdZkB5kVBeXjedL9v_N_F40SyupL5Q9YzLqqEFUZ0i0UyBHml8Oo-TXkliGcSExfpRhZ97azXHbahKXP_IeNpa3J5BK9BeyaMKyZWHMjxKc-aqfTekdM.Cma8G0gUd7jvjAJ5WMbiTfqHQuErqgvpfE7YmX7tF9Q&dib_tag=se&keywords=valentino+cologne+for+men&qid=1751727640&sprefix=valenti%2Caps%2C89&sr=8-2">
-        <img src="images/valentino.jpg" alt="">
+<main> 
+    <div class="family-container">
+        <img class="family" src="images/Famiily.jpg" alt="">
+    </div>
+    <div class="involved">
+        <h1>Get involve</h1>
+        <p>
+            Whether it’s through volunteering, creating a fundraiser, attending a gala or supporting us on social media, when you get involved with St. Jude, you can help make a difference
+
+        </p>
+
+
+    </div>
+    <div class="products">
+    <div id="p-one">
+        <img class="grid-img" src="images/marathonjpg.jpg" alt="">
         <div class="content">
-            <h3> Valentino</h3>
-            <h4>$95.99</h4>
-            <p>This A woody spicy fragrance has a blend of fresh, salty, sweet, green, sophisticated and enchanting.</p>
+            <h3> Find a Sports or fitness event</h3>
+            
+            <p>Use your favorite sports and fitness activities to help CheckUp . Register for an existing event or create one of your own, in person or virtually, to raise funds while you get fit.</p>
         </div>
     </div></a>
 
@@ -50,7 +68,8 @@
             <p>Green Nashi, Bergamot, Kumquat, Cardamom, Coriander, Geranium, Haitian Vetiver, Suede, Ambergris</p>
         </div>
     
-    </div></a>
+    </div>
+</div>
 </main>
 </body>
 </html>
