--- a/getinvolved/getinvolved.html
+++ b/getinvolved/getinvolved.html
@@ -10,11 +10,11 @@
 <body>
    <header>
     <nav>
-        <img class="logo" src="logo.png" alt="">
+        <img class="logo" src="images/Logo.png" alt="">
+        <li><a href="../index.html">Home</a></li>
         <li><a href="">Contact us</a></li>
         <li><a href="">Donate</a></li>
         <li><a href="">Our Team</a></li>
-        <li><a href="">Get involve</a></li>
       </nav>
     </nav>
   </header>
@@ -22,15 +22,13 @@
 <main> 
     <div class="family-container">
         <img class="family" src="images/Famiily.jpg" alt="">
-    </div>
-    <div class="involved">
+        <div class="involved">
         <h1>Get involve</h1>
         <p>
-            Whether it’s through volunteering, creating a fundraiser, attending a gala or supporting us on social media, when you get involved with St. Jude, you can help make a difference
-
+            Whether it’s through volunteering, creating a fundraiser, attending a gala or supporting us on social media, when you get involved with St. Jude, you can help make a difference.
         </p>
-
-
+        </div>
+        <button><a href="">Donate</a></button>
     </div>
     <div class="products">
     <div id="p-one">
@@ -71,5 +69,9 @@
     </div>
 </div>
 </main>
+ <footer>
+
+      <p>© Copyright 2025. Blue Foward, a not-for-profit.</p>
+    </footer>
 </body>
 </html>
