intergrated nav bar

--- a/donatepage/donate.html
+++ b/donatepage/donate.html
@@ -9,16 +9,18 @@
 </head>
 
 <header>
-    <nav class="bluefwd-navbar">
-        <ul>
-            <li>Mainpage</li>
-            <li>About us</li>
-            <li>Contact us</li>
-            <li>Donate</li>
-            <li></li>
-        </ul>
+    <nav>
+    <ul class="ul-navbar">
+        <div>
+        <img class="logo" src="logo.png" alt="">
+        </div>
+        <li class="li-navbar"><a href="">Contact us</a></li>
+        <li class="li-navbar"><a href="">Donate</a></li>
+        <li class="li-navbar"><a href="">Our Team</a></li>
+        <li class="li-navbar"><a href="getinvolved/getinvolved.html">Get involve</a></li>
+    </ul>
     </nav>
-</header>
+  </header>
 
 
 <body>
