finished index,working on get involved

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h1>CheckUp for all</h1>
     <img class="main-pic" src="patientchecking.jpg" alt="">
 
-    <div class="stories">
+    <div class="goals">
       <div>
       <h3> Goals</h3>
        </div>
@@ -37,20 +37,20 @@
     </div>
   
     <div class="grid-main">
-      <div id="g-one">
+      <div class="grid-container">
         <h5> Offer Free Mental Health Screening</h5>
         <p> We aim to integrate emotional wellnes checks into 
           our helth clinics by training staff and inviting loca therapist.
         </p>
       </div>
 
-      <div id="g-two">
+      <div class="grid-container">
         <h5> Collaborate with Universities for Student-Led Clinics</h5>
         <p> We plan to involve medical and nursing students to offer 
           free comunity clinics as part of their outreach and training.
         </p>
       </div>
-         <div id="g-three">
+         <div class="grid-container">
         <h5> Hosted 15+ Free Community Health Events</h5>
         <p> We've successfully organized over 15 <pop-up>
           clinics across underserved neightborhoods,
@@ -59,7 +59,7 @@
         </pop-up></p>
          </div>
 
-         <div id="g-four">
+         <div class="grid-container">
         <h5> Partnered with 10 Local Clinics</h5>
         <p> We've built strong partnerships with Local
           clinics and mobiles units to expand access to checkups for families
@@ -68,7 +68,7 @@
          </div>
     </div>
          <div class="donate">
-      <button> Donate</button> 
+             <button><a href="#">Donate</a></button> 
           </div>   
       
 
