--- a/getinvolved/getinvolved.html
+++ b/getinvolved/getinvolved.html
@@ -10,12 +10,17 @@
 <body>
    <header>
     <nav>
-        <img class="logo" src="images/Logo.png" alt="">
-        <li><a href="../index.html">Home</a></li>
+      <ul>
+        <div>
+        <a href="../index.html"><img class="logo" src="images/Logo.png" alt=""><a href="../index.html"></a>
+        </a>
+    </div>
+      
         <li><a href="">Contact us</a></li>
         <li><a href="">Donate</a></li>
         <li><a href="">Our Team</a></li>
-      </nav>
+        <li><a href="getinvolved/getinvolved.html">Get involve</a></li>
+      </ul>
     </nav>
   </header>
 
