index media queries

--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
     <h1>CheckUp for all</h1>
     <img class="main-pic" src="patientchecking.jpg" alt="">
 
-    <div class="goals">
-      <div>
+    <!-- <div class="goals"> -->
+
+    <div class="grid-main">
+      <div id="goals">
       <h3> Goals</h3>
        </div>
-      <div>
+      <div id="acomplishes">
       <h3>Acomplishes</h3>
       </div>
-    </div>
-  
-    <div class="grid-main">
+
+    
       <div class="grid-container">
         <h5> Offer Free Mental Health Screening</h5>
         <p> We aim to integrate emotional wellnes checks into 
