finish get involved page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="">Contact us</a></li>
         <li><a href="">Donate</a></li>
         <li><a href="">Our Team</a></li>
-        <li><a href="getinvolved/getinvolved.html">Get involve</a></li>
+        <li><a href="getinvolved/getinvolved.html">Get involved</a></li>
       </ul>
     </nav>
   </header>
@@ -27,7 +27,6 @@
     <h1>CheckUp for all</h1>
     <img class="main-pic" src="patientchecking.jpg" alt="">
 
-    <!-- <div class="goals"> -->
 
     <div class="grid-main">
       <div id="goals">
