[CHECKPOINT] Edits made to HTML & CSS content. Further CSS changes to be made; content yet to be finalized.

--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -5,30 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link rel="stylesheet" href="aboutus.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+
     <div class="main_content" id="h1_aboutus">
-    <h1>About Us</h1>
-        <p>Beatin blue is Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio voluptas blanditiis dolorum accusantium consequatur cumque nostrum mollitia maiores impedit unde, veniam cupiditate, deleniti odio voluptatum error hic modi. Voluptatum, iure!</p>
+        <div class="h1_aboutus--heading">
+            <h1>About Us</h1>
+        </div>
+        <img src="">
+        <p>CheckUp For All is a nonprofit organization dedicated to ensuring that everyone — regardless of income, background, or insurance status — has access to basic and preventive health checkups.</p>
     </div>
+    
     <section class="grouped_content">
-    <div class="main_content" id="h2_mission">
-        <h2>Mission Statement</h2>
-        <p> TEst Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae mollitia deleniti nulla sed excepturi voluptate. Reiciendis quaerat placeat, quam itaque voluptate praesentium obcaecati, ducimus aperiam illum veritatis error corporis doloribus.</p>
-    </div>
-    <div class="main_content" id="h3_why">
-        <h3 id="h3_why">Our Why</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis assumenda adipisci accusamus. Ad repellat ratione voluptatibus quibusdam qui ex ducimus nihil impedit! Aperiam odit odio corrupti pariatur ipsam ullam impedit!</p>
-    </div>
-    <div class="main_content" id="h3_colon">
-        <h3>What is Colon Cancer</h3>
-        <p>Another TEst Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse molestias commodi harum, quo incidunt aperiam veritatis quibusdam atque a in iure maiores pariatur rem doloremque ex voluptatibus quia eos laboriosam.</p>
-    </div>
-    <div class="main_content" id="h3_plan">
-        <h3>Our plan</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus sed, voluptas expedita perferendis iure architecto quibusdam quia amet eveniet rerum quidem est alias? Illo sint sit excepturi quibusdam. Illo, eum.</p>
-    </div>
+
+        <div class="main_content" id="h2_mission">
+            <h2>Mission Statement</h2>
+            <p>Making preventive healthcare accessible to low-income and uninsured individuals by providing free or affordable checkups, screening and health education.</p>
+
+        <div class="main_content" id="h3_why">
+            <h3 id="h3_why">What is Checkup For All?</h3>
+            <p> TBD</p>
+        </div>
+
+        <div class="main_content" id="h3_help">
+            <h3>How we Help</h3>
+            <p> We provide a no-cost yearly check up at any hospital network.
+            We believe healthcare shouldn't be a luxury.
+            </p>
+        </div>
+
+        <div class="main_content" id="h3_plan">
+            <h3>How you can Help</h3>
+            <p>By donating, you can support our cause.</p>
+            <div class="donate_button">
+                <button>Donate</button>
+            </div>
+        </div>
+
     </section>
 
 </body>
