finish media queries

--- a/getinvolved/getinvolved.html
+++ b/getinvolved/getinvolved.html
@@ -18,7 +18,7 @@
                     </a>
                 </div>
 
-                <li><a href="">Contact us</a></li>
+                <li><a href="">About us</a></li>
                 <li><a href="">Donate</a></li>
                 <li><a href="">Our Team</a></li>
                 <li><a href="#">Get involved</a></li>
@@ -80,7 +80,7 @@
     </main>
     <footer>
 
-        <p>© Copyright 2025. Blue Foward, a not-for-profit.</p>
+        <p>© Copyright 2025. CheckUp For All, a not-for-profit.</p>
     </footer>
 </body>
 
