--- a/index.html
+++ b/index.html
@@ -26,41 +26,40 @@
   <main>
     <h1>CheckUp for all</h1>
     <img class="main-pic" src="patientchecking.jpg" alt="">
-
-
-    <div class="grid-main">
+ 
       <div id="goals">
       <h3> Goals</h3>
        </div>
-      <div id="acomplishes">
-      <h3>Acomplishes</h3>
-      </div>
-
-    
+   <div class="grid-main">
       <div class="grid-container">
-        <h5> Offer Free Mental Health Screening</h5>
+        <h4> Offer Free Mental Health Screening</h4>
         <p> We aim to integrate emotional wellnes checks into 
           our helth clinics by training staff and inviting loca therapist.
         </p>
       </div>
 
       <div class="grid-container">
-        <h5> Collaborate with Universities for Student-Led Clinics</h5>
+        <h4> Collaborate with Universities for Student-Led Clinics</h4>
         <p> We plan to involve medical and nursing students to offer 
           free comunity clinics as part of their outreach and training.
         </p>
       </div>
-         <div class="grid-container">
-        <h5> Hosted 15+ Free Community Health Events</h5>
-        <p> We've successfully organized over 15 <pop-up>
+    </div>
+        <div id="accomplishment">
+      <h3>Accomplishment</h3>
+      </div>
+        <div class="grid-main1">
+         <div class="grid-container1">
+        <h4> Hosted 15+ Free Community Health Events</h4>
+        <p> We've successfully organized over 15
           clinics across underserved neightborhoods,
           providing more than 1,200 free Health screenings
           for blood presure, glucose, and cholesterol.
-        </pop-up></p>
+        </p>
          </div>
 
-         <div class="grid-container">
-        <h5> Partnered with 10 Local Clinics</h5>
+         <div class="grid-container1">
+        <h4> Partnered with 10 Local Clinics</h4>
         <p> We've built strong partnerships with Local
           clinics and mobiles units to expand access to checkups for families
           without insurance or transportation
@@ -70,7 +69,7 @@
          <div class="donate">
              <button><a href="#">Donate</a></button> 
           </div>   
-      
+      </div>
 
 
   </main>
