added footer and improved  CSS

--- a/our_team.html
+++ b/our_team.html
@@ -6,6 +6,7 @@
     <title>Our Team</title>
     <link rel="stylesheet" href="our_team.css">
 </head>
+<body>
 <header>
     <nav class="nav">
       <ul class="navbar">
@@ -19,7 +20,7 @@
       </ul>
     </nav>
   </header>
-<body>
+  <main>
     <div class="wrapper">
         <div class="title">
             <h3>Meet the team</h3>
@@ -105,19 +106,16 @@
             <img class="bio_pic" src="2J5A3206.jpg" alt="Edgardo">
             <div class="bio_text">
                 <h1>Edgardo Torress</h1>
-                <p class="bio_description">Dedicated to making healthcare more accessible. He supports both the 
-                tech side and the people side of Checkup For all. Works behind the scenes on the website and in person at events, always 
+                <p class="bio_description">My name is Edgardo and I am dedicated to making healthcare more accessible. I supports both the 
+                tech side and the people side of Checkup For all. I works behind the scenes on the website and in person at events, I am always 
                 ready to help someone get connected to the care they deserve.</p>
              </div>
         </section>
         <section class="bio">
-             <img class="bio_pic" src="2J5A3198.jpg" alt="Michael">
+             <img class="bio_pic Michael" src="2J5A3198.jpg" alt="Michael">
              <div class="bio_text">
                 <h1>Michael Howey</h1>
-                <p class="bio_description">My name is Alexander and I am interested in all things tech related!
-                I have always enjoyed exploring our rapidly changing landscape in technology. 
-                Throughout my years at Central Piedmont Community College, I have developed skill sets in both hardware and software; giving me a solid foundation in technology. 
-                 In my role as a coding apprentice, I am reaching towards improving my software skills and learning new technologies</p>
+                <p class="bio_description">My name is Michael Howey. I'm 19 years old and a coding apprentice with Road to Hire. I started the Road to Hire program when I was a junior in High School. Within this program, we learned coding with HTML, public speaking, and time-management skills. I graduated from Harding University High School in 2024. Later, I completed a year at Central Piedmont Community College while taking programming and networking classes. Once I turned 19, I applied for the Road to Hire coding apprenticeship. This is where I know I've made the right decision</p>
             </div>
         </section>
         <section class="bio ">
@@ -142,5 +140,10 @@
             </div>
         </section>
    </div>
+</main>
+<footer>
+    <p>© Copyright 2025. Check Up for all, a not-for-profit.</p>
+  </footer>
+  
 </body>
 </html>
