fixing some typos

--- a/getinvolved/getinvolved.html
+++ b/getinvolved/getinvolved.html
@@ -41,17 +41,17 @@
 
         <div class="services">
             <div class="events">
-                <img class="grid-img" src="images/marathonjpg.jpg" alt="">
+                <img class="grid-img" src="images/marathonjpg.jpg" alt="People running">
                 <div class="content">
                     <h3> Find a Sports or fitness event</h3>
 
-                    <p>Use your favorite sports and fitness activities to help CheckUp . Register for an existing event
+                    <p>Use your favorite sports and fitness activities to help CheckUp For All. Register for an existing event
                         or create one of your own, in person or virtually, to raise funds while you get fit.</p>
                 </div>
             </div></a>
 
             <div class="events">
-            <img class="grid-img" src="images/Calendar.jpg" alt="">
+            <img class="grid-img" src="images/Calendar.jpg" alt="Calendar">
                     <div>
                         <h3>Next Events </h3>
                         <p> Join us for a day of free medial screenings, health eduaction, and wellness resources for all ages.</p>
@@ -59,7 +59,7 @@
             </div>
 
             <div class="events">
-                <img class="grid-img" src="images/doctor.jpg" alt="">
+                <img class="grid-img" src="images/doctor.jpg" alt="Doctor">
                 <div>
                     <h3>Volunteer Doctors</h3>
                     <p> Our volunteer doctors play a vital role in helpin us deliver
