--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </main>
   <footer>
 
-    <p>© Copyright 2025. Blue Foward, a not-for-profit.</p>
+    <p>© Copyright 2025. CheckUp For all, a not-for-profit.</p>
   </footer>
 </body>
 
