--- a/our_team.html
+++ b/our_team.html
@@ -105,7 +105,7 @@
          <section class="bio">
             <img class="bio_pic" src="2J5A3206.jpg" alt="Edgardo">
             <div class="bio_text">
-                <h1>Edgardo Torress</h1>
+                <h1>Edgardo Torres</h1>
                 <p class="bio_description">My name is Edgardo and I am dedicated to making healthcare more accessible. I supports both the 
                 tech side and the people side of Checkup For all. I works behind the scenes on the website and in person at events, I am always 
                 ready to help someone get connected to the care they deserve.</p>
