[UPDATE]--- Editted HTML Content, Editted CSS content; added images, added media queries. Finalization to be done later today.

--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -6,43 +6,62 @@
     <title>About Us</title>
     <link rel="stylesheet" href="aboutus.css">
 </head>
-<body>
 
+<body>
+<header>
+    <nav>
+      <ul class="nav">
+        <div>
+        <img class="logo" src="CFA-icon.png" alt="Home">
+        </div>
+        <li class="nav_list"><a href="">Contact us</a></li>
+        <li class="nav_list"><a href="">Donate</a></li>
+        <li class="nav_list"><a href="">Our Team</a></li>
+        <li class="nav_list"><a href="getinvolved/getinvolved.html">Get involve</a></li>
+      </ul>
+    </nav>
+  </header>
+
+<main>
     <div class="main_content" id="h1_aboutus">
         <div class="h1_aboutus--heading">
             <h1>About Us</h1>
+            <p class="h1_description">CheckUp For All is a nonprofit organization dedicated to ensuring that everyone — regardless of income, background, or insurance status — has access to basic and preventive health checkups.</p>
+            <img src="docvisit.jpg" class="doc_img">    
         </div>
-        <img src="">
-        <p>CheckUp For All is a nonprofit organization dedicated to ensuring that everyone — regardless of income, background, or insurance status — has access to basic and preventive health checkups.</p>
     </div>
-    
-    <section class="grouped_content">
 
-        <div class="main_content" id="h2_mission">
+        <div class="h2_mission">
             <h2>Mission Statement</h2>
             <p>Making preventive healthcare accessible to low-income and uninsured individuals by providing free or affordable checkups, screening and health education.</p>
-
-        <div class="main_content" id="h3_why">
-            <h3 id="h3_why">What is Checkup For All?</h3>
-            <p> TBD</p>
+            <img src="healthicon.jpg" class="health_img">
         </div>
 
-        <div class="main_content" id="h3_help">
-            <h3>How we Help</h3>
-            <p> We provide a no-cost yearly check up at any hospital network.
-            We believe healthcare shouldn't be a luxury.
-            </p>
+        <div class="h3_why">
+            <div class="h3_why--heading">
+                <h3>What is Checkup For All?</h3>
+            </div>
+            <p> Checkup For All is a nonprofit organization who serves low-income households with a guarntee in We provide a no-cost yearly check up at any hospital network.
+            We also host events that offer education in healthcare and wellness.
+            We're always accepting volunteers in medicine & at our volunteering events!
+            We believe healthcare shouldn't be a luxury.</p>
         </div>
 
-        <div class="main_content" id="h3_plan">
-            <h3>How you can Help</h3>
+        <div class="h3_help">
+            <div class="h3_help--heading">
+            <h3 class="h3_help--heading">How you can Help</h3>
             <p>By donating, you can support our cause.</p>
-            <div class="donate_button">
-                <button>Donate</button>
+            </div>
+            <div class="button_div">
+                <button class="donate_button">Donate</button>
             </div>
         </div>
+</main>
 
-    </section>
+<footer>
+    <p>© Copyright 2025. Checkup For All, a not-for-profit.</p>
+</footer>
 
 </body>
+
 </html>
