--- a/our_team.html
+++ b/our_team.html
@@ -16,7 +16,7 @@
         <li class="page"><a href="">About US</a></li>
         <li class="page"><a href="">Donate</a></li>
         <li class="page"><a href="our_team.html">Our Team</a></li>
-        <li class="page"><a href="getinvolved/getinvolved.html">Get involve</a></li>
+        <li class="page"><a href="getinvolved/getinvolved.html">Get involved</a></li>
       </ul>
     </nav>
   </header>
