Finalization of content & CSS.

--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -38,23 +38,21 @@
         </div>
 
         <div class="h3_why">
-            <div class="h3_why--heading">
-                <h3>What is Checkup For All?</h3>
-            </div>
-            <p> Checkup For All is a nonprofit organization who serves low-income households with a guarntee in We provide a no-cost yearly check up at any hospital network.
-            We also host events that offer education in healthcare and wellness.
-            We're always accepting volunteers in medicine & at our volunteering events!
-            We believe healthcare shouldn't be a luxury.</p>
+            <h3>What is Checkup For All?</h3>
+            <p> 
+            Many low-income households do not have adequate access to annual wellness appointments; That's where Checkup For All comes in.
+            Checkup For All is a non-profit organization who serves low-income households with a guarantee in healthcare check ups. 
+            We provide a no-cost annual check ups at any hospital network.
+            Whether uninsured or insured, we also provide finacial assitance for further wellness appointments & emergency visits.
+            Checkup For All also hosts events that offer education in healthcare and wellness. Including wellness workshops & fundraising events.
+            We are always accepting volunteers to join us at our wellness workshops and fundraising events!
+            At Checkup For All, we believe healthcare shouldn't be a luxury.</p>
         </div>
 
         <div class="h3_help">
-            <div class="h3_help--heading">
-            <h3 class="h3_help--heading">How you can Help</h3>
-            <p>By donating, you can support our cause.</p>
-            </div>
-            <div class="button_div">
-                <button class="donate_button">Donate</button>
-            </div>
+            <h3 class="h3_help--heading">How You Can Help</h3>
+            <p>By donating or volunteering you can support our cause.</p>
+            <button class="donate_button">Donate</button>
         </div>
 </main>
 
