ading url to navbars

--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -12,12 +12,12 @@
     <nav>
       <ul class="nav">
         <div>
-        <img class="logo" src="CFA-icon.png" alt="Home">
+        <a href="../index.html"><img class="logo" src="CFA-icon.png" alt="Home"></a>
         </div>
-        <li class="nav_list"><a href="">Contact us</a></li>
-        <li class="nav_list"><a href="">Donate</a></li>
-        <li class="nav_list"><a href="">Our Team</a></li>
-        <li class="nav_list"><a href="getinvolved/getinvolved.html">Get involve</a></li>
+        <li class="nav_list"><a href="aboutus.html">About us</a></li>
+        <li class="nav_list"><a href="/donatepage/donate.html">Donate</a></li>
+        <li class="nav_list"><a href="/ourteam/our_team.html">Our Team</a></li>
+        <li class="nav_list"><a href="/getinvolved/getinvolved.html">Get involve</a></li>
       </ul>
     </nav>
   </header>
