--- a/donatepage/donate.html
+++ b/donatepage/donate.html
@@ -14,10 +14,10 @@
         <div>
         <img class="logo" src="logo.png" alt="">
         </div>
-        <li class="li-navbar"><a href="">Contact us</a></li>
-        <li class="li-navbar"><a href="">Donate</a></li>
-        <li class="li-navbar"><a href="">Our Team</a></li>
-        <li class="li-navbar"><a href="getinvolved/getinvolved.html">Get involved</a></li>
+        <li class="li-navbar"><a href="/aboutus/aboutus.html">About us</a></li>
+        <li class="li-navbar"><a href="/donatepage/donate.html">Donate</a></li>
+        <li class="li-navbar"><a href="/ourteam/our_team.html">Our Team</a></li>
+        <li class="li-navbar"><a href="/getinvolved/getinvolved.html">Get involved</a></li>
     </ul>
     </nav>
 </header>
