--- a/getinvolved/getinvolved.html
+++ b/getinvolved/getinvolved.html
@@ -18,9 +18,9 @@
                     </a>
                 </div>
 
-                <li><a href="">About us</a></li>
-                <li><a href="">Donate</a></li>
-                <li><a href="">Our Team</a></li>
+                <li><a href="/aboutus/aboutus.html">About us</a></li>
+                <li><a href="/donatepage/donate.html">Donate</a></li>
+                <li><a href="/ourteam/our_team.html">Our Team</a></li>
                 <li><a href="#">Get involved</a></li>
             </ul>
         </nav>
