--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
-  <title>Document</title>
+  <title>CheckUp For All </title>
 </head>
 
 <body>
@@ -16,9 +16,9 @@
         <img class="logo" src="logo.png" alt="">
         </div>
       
-        <li><a href="">Contact us</a></li>
-        <li><a href="">Donate</a></li>
-        <li><a href="">Our Team</a></li>
+        <li><a href="aboutus/aboutus.html">About us</a></li>
+        <li><a href="donatepage/donate.html">Donate</a></li>
+        <li><a href="/ourteam/our_team.html">Our Team</a></li>
         <li><a href="getinvolved/getinvolved.html">Get involved</a></li>
       </ul>
     </nav>
