--- a/ourteam/our_team.html
+++ b/ourteam/our_team.html
@@ -11,12 +11,12 @@
     <nav class="nav">
       <ul class="navbar">
         <div>
-        <img class="logo" src="logo.png" alt="">
+        <a href="../index.html"><img class="logo" src="logo.png" alt=""></a>
         </div>
-        <li class="page"><a href="">About US</a></li>
-        <li class="page"><a href="">Donate</a></li>
+        <li class="page"><a href="/aboutus/aboutus.html">About US</a></li>
+        <li class="page"><a href="/donatepage/donate.html">Donate</a></li>
         <li class="page"><a href="our_team.html">Our Team</a></li>
-        <li class="page"><a href="getinvolved/getinvolved.html">Get involved</a></li>
+        <li class="page"><a href="/getinvolved/getinvolved.html">Get involved</a></li>
       </ul>
     </nav>
   </header>
