--- a/ourteam/our_team.html
+++ b/ourteam/our_team.html
@@ -13,7 +13,7 @@
         <div>
         <a href="../index.html"><img class="logo" src="logo.png" alt=""></a>
         </div>
-        <li class="page"><a href="/aboutus/aboutus.html">About US</a></li>
+        <li class="page"><a href="/aboutus/aboutus.html">About us</a></li>
         <li class="page"><a href="/donatepage/donate.html">Donate</a></li>
         <li class="page"><a href="our_team.html">Our Team</a></li>
         <li class="page"><a href="/getinvolved/getinvolved.html">Get involved</a></li>
